# fastapi-quick-authserver

./: Dockerfile  LICENSE.txt  README.md  pyproject.toml  run.py
src/authserver/: __about__.py  __init__.py  main.py
tests/: __init__.py
