[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authserver"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "raushanraja", email = "vraushanraja@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
 "fastapi[standard]==0.112.2,<0.114.0",
]


[project.urls]
Documentation = "https://github.com/raushanraja/authserver#readme"
Issues = "https://github.com/raushanraja/authserver/issues"
Source = "https://github.com/raushanraja/authserver"

[tool.hatch.version]
path = "src/authserver/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.default.scripts]
app = "python src/fastauth/main.py"

[tool.coverage.run]
source_pkgs = ["authserver", "tests"]
branch = true
parallel = true
omit = [
  "src/authserver/__about__.py",
]

[tool.coverage.paths]
authserver = ["src/authserver", "*/authserver/src/authserver"]
tests = ["tests", "*/authserver/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
